[package]
name = "markdoc-rust-wasm"
version = "0.1.0"
authors = ["Ryan Paul <rpaul@stripe.com>"]
description = "WebAssembly bindings for Markdoc"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.55"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.4.2"
markdoc = { version = "0.1.0", path = ".." }